salesforce_sfdx/main/default/objects/OSFCL_Barra_de_transmision__c/OSFCL_Barra_de_transmision__c.object-meta.xml
<CustomObject>
    <label>Barra de transmisión</label>
    <nameField>
        <label>Nombre de Barra de transmicion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Barras de transmisión</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>