salesforce_sfdx/main/default/objects/OSFCL_Barra_de_transmision__c/fields/OSFCL_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Ciudad__c</fullName>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OSFCL_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arica</fullName>
            </value>
            <value>
                <fullName>Camarones</fullName>
            </value>
            <value>
                <fullName>Putre</fullName>
            </value>
            <value>
                <fullName>General Lagos</fullName>
            </value>
            <value>
                <fullName>Iquique</fullName>
            </value>
            <value>
                <fullName>Camiña</fullName>
            </value>
            <value>
                <fullName>Colchane</fullName>
            </value>
            <value>
                <fullName>Huara</fullName>
            </value>
            <value>
                <fullName>Pica</fullName>
            </value>
            <value>
                <fullName>Pozo Almonte</fullName>
            </value>
            <value>
                <fullName>Alto Hospicio</fullName>
            </value>
            <value>
                <fullName>Antofagasta</fullName>
            </value>
            <value>
                <fullName>Mejillones</fullName>
            </value>
            <value>
                <fullName>Sierra Gorda</fullName>
            </value>
            <value>
                <fullName>Taltal</fullName>
            </value>
            <value>
                <fullName>Calama</fullName>
            </value>
            <value>
                <fullName>Ollagüe</fullName>
            </value>
            <value>
                <fullName>San Pedro de Atacama</fullName>
            </value>
            <value>
                <fullName>Tocopilla</fullName>
            </value>
            <value>
                <fullName>María Elena</fullName>
            </value>
            <value>
                <fullName>Copiapó</fullName>
            </value>
            <value>
                <fullName>Caldera</fullName>
            </value>
            <value>
                <fullName>Tierra Amarilla</fullName>
            </value>
            <value>
                <fullName>Chañaral</fullName>
            </value>
            <value>
                <fullName>Diego de Almagro</fullName>
            </value>
            <value>
                <fullName>Vallenar</fullName>
            </value>
            <value>
                <fullName>Alto del Carmen</fullName>
            </value>
            <value>
                <fullName>Freirina</fullName>
            </value>
            <value>
                <fullName>Huasco</fullName>
            </value>
            <value>
                <fullName>La Serena</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>