salesforce_sfdx/main/default/objects/OSFCL_Barra_de_transmision__c/fields/OSFCL_Region__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Region__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I REGION DE TARAPACA</fullName>
            </value>
            <value>
                <fullName>II REGION DE ANTOFAGASTA</fullName>
            </value>
            <value>
                <fullName>III REGION DE ATACAMA</fullName>
            </value>
            <value>
                <fullName>IV REGION DE COQUIMBO</fullName>
            </value>
            <value>
                <fullName>V REGION DE VALPARAISO</fullName>
            </value>
            <value>
                <fullName>VI REGION DE O´HIGGINS</fullName>
            </value>
            <value>
                <fullName>VII REGION DEL MAULE</fullName>
            </value>
            <value>
                <fullName>VIII REGION DEL BIOBIO</fullName>
            </value>
            <value>
                <fullName>IX REGION DE LA ARAUCANIA</fullName>
            </value>
            <value>
                <fullName>X REGION DE LOS LAGOS</fullName>
            </value>
            <value>
                <fullName>XI REGION DE AISEN</fullName>
            </value>
            <value>
                <fullName>XII REGION DE MAGALLANES</fullName>
            </value>
            <value>
                <fullName>XIII REGION METROPOLITANA</fullName>
            </value>
            <value>
                <fullName>XIV REGION DE LOS RIOS</fullName>
            </value>
            <value>
                <fullName>XV REGION DE ARICA Y PARINACOTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>