salesforce_sfdx/main/default/objects/OSFCL_Barra_de_transmision__c/fields/OSFCL_Tension__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Tension__c</fullName>
    <inlineHelpText>Unidad de medida (kV)</inlineHelpText>
    <label>Tensión</label>
    <length>5</length>
    <type>Text</type>
</CustomField>