salesforce_sfdx/main/default/objects/OSFCL_Barra_de_transmision__c/fields/OSFCL_Zona_Chile__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Zona_Chile__c</fullName>
    <label>Zona Chile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norte Grande</fullName>
            </value>
            <value>
                <fullName>Norte Chico</fullName>
            </value>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Centro Sur</fullName>
            </value>
            <value>
                <fullName>Sur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>