salesforce_sfdx/main/default/objects/OSFCL_Barra_de_transmision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OSFCL_Tension__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>